<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Streameus</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open the menu</string>
    <string name="drawer_close">Close the menu</string>
    <string name="title_activity_login">Connexion</string>
    <string name="fluxdactu">News feed</string>
    <string name="profil">Profil</string>
    <string name="agenda">Calendar</string>
    <string name="search">Search</string>
    <string name="aide">Help</string>
    <string name="apropos">About</string>
    <string name="mycontacts">Users</string>
    <string name="sedeconnecter">Logout</string>
    <string name="menu">Menu</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="suivre">Subscribe</string>
    <string name="chargement">Loading</string>
    <string name="wait_while_loading_">Wait while loading…</string>
    <string name="date_de_naissance">Birthday</string>
    <string name="adresse_e_mail">E-mail</string>
    <string name="lequipe">The team</string>
    <string name="pseudo">Pseudo</string>
    <string name="email">Email</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="website">Website</string>
    <string name="profession">Profession</string>
    <string name="description">Description</string>
    <string name="se_connecter">Log out</string>
    <string name="no_network">Unable to access internet. Please check your network connexion</string>
    <string name="error_unable_to_retrieve_following">Unable to retrieve this users</string>
    <string name="add_contact">Add contacts</string>
    <string name="all_users">All users</string>
    <string name="users">Users</string>
    <string name="not_connected_toast">You are not logged in</string>
    <string name="add_a_contact">Add a contact</string>
    <string name="someone_contact">%s\'s contacts</string>
    <string name="conference">Conference</string>
    <string name="conferences">Conferences</string>
    <string name="event_passed">Event passed</string>
    <string name="you_are_the_owner">You are the Owner</string>
    <string name="envoyer">Send</string>
    <string name="login_error">An error appened, please try again.</string>
    <string name="his_conferences">His conferences</string>
    <string name="took_part">Took part</string>
    <string name="subscribe_to">Subscribed to</string>
    <string name="recommanded">Recommended</string>
    <string name="soon">Soon</string>
    <string name="password">Password</string>
    <string name="comfirm_password">Password</string>
    <string name="mail_placeholder">you@streameus.com</string>
    <string name="your_friends">Your friends</string>
    <string name="user_recommanded_for_you">Recommended for you</string>
    <string name="infos">Infos</string>
    <string name="participants">Participants</string>
    <string name="all_the_conferences">All the conferences</string>
    <string name="all_categories">Categories</string>
    <string name="live">Live</string>
    <string name="demo_activity_discover">Discover</string>
    <string name="versionname_notFound">Not Found</string>

</resources>